src/test/ui/feature-gates/feature-gate-unsafe_block_in_unsafe_fn.stderr
error[E0658]: the `unsafe_op_in_unsafe_fn` lint is unstable
  --> $DIR/feature-gate-unsafe_block_in_unsafe_fn.rs:1:1
   |
LL | #![deny(unsafe_op_in_unsafe_fn)]
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   |
   = note: see issue #71668 <https://github.com/rust-lang/rust/issues/71668> for more information
   = help: add `#![feature(unsafe_block_in_unsafe_fn)]` to the crate attributes to enable

error[E0658]: the `unsafe_op_in_unsafe_fn` lint is unstable
  --> $DIR/feature-gate-unsafe_block_in_unsafe_fn.rs:1:1
   |
LL | #![deny(unsafe_op_in_unsafe_fn)]
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   |
   = note: see issue #71668 <https://github.com/rust-lang/rust/issues/71668> for more information
   = help: add `#![feature(unsafe_block_in_unsafe_fn)]` to the crate attributes to enable

error[E0658]: the `unsafe_op_in_unsafe_fn` lint is unstable
  --> $DIR/feature-gate-unsafe_block_in_unsafe_fn.rs:1:1
   |
LL | #![deny(unsafe_op_in_unsafe_fn)]
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   |
   = note: see issue #71668 <https://github.com/rust-lang/rust/issues/71668> for more information
   = help: add `#![feature(unsafe_block_in_unsafe_fn)]` to the crate attributes to enable

error: aborting due to 3 previous errors

For more information about this error, try `rustc --explain E0658`.
