src/test/ui/feature-gates/feature-gate-unsafe_block_in_unsafe_fn.rs
#![deny(unsafe_op_in_unsafe_fn)]
//~^ ERROR the `unsafe_op_in_unsafe_fn` lint is unstable

fn main() {}
